deployment/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-giphy-ingress
spec:
  rules:
    - host: giphy.jpunter.co.uk
      http:
        paths:
          - backend:
              service:
                name: random-giphy-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
